--- a/AXIT/css/style.css
+++ b/AXIT/css/style.css
@@ -29,11 +29,11 @@
 
 .axit-logo a {
 	display: flex;
-	transition: 1.5s;
+	transition: 0.3s;
 }
 
 .axit-logo a:hover {
-	transform: skew(0deg, 180deg);
+	transform: skew(10deg, 10deg);
 }
 
 .axit-nav {
@@ -126,6 +126,12 @@
 	border: 2px solid #FFFFFF;
 	padding: 20px 0;
 	max-width: 270px;
+	transition: 0.3s;
+}
+
+.banner-text_download:hover {
+	background: #AB4949;
+	border: 2px solid #EC7979;
 }
 
 .banner-form {
@@ -269,14 +275,32 @@
 }
 
 .tabs_button2 {
+	border: 1px solid #FFFFFF;
+	border-bottom: none;
 	padding: 10px 80px;
+	border-radius: 5px 5px 0 0;
+	cursor: pointer;
+	transition: 0.3s;
+}
+
+.tabs_button2:hover {
+	border: 1px solid #C6CBCD;
+	border-bottom: none;
 }
 
 .tabs_button3 {
+	border: 1px solid #FFFFFF;
+	border-bottom: none;
 	padding: 10px 80px;
+	border-radius: 5px 5px 0 0;
+	cursor: pointer;
+	transition: 0.3s;
 }
 
-/* сделано, кроме button1 */
+.tabs_button3:hover {
+	border: 1px solid #C6CBCD;
+	border-bottom: none;
+}
 
 .tabs_content {
 	display: flex;
@@ -317,8 +341,19 @@
 	padding: 15px 90px;
 	margin: 0 0 54px 0;
 	background: #EC7979;
-	border: none;
-	cursor: pointer;
+	border: 1px solid #EC7979;
+	transition: 0.3s;
+}
+
+.tabs_download:hover {
+	color: #000000;
+	background: #FFFFFF;
+	border: 1px solid #000000;
+}
+
+.tabs_download:active {
+	background: #EC7979;
+	box-shadow: inset 0 0 10px #AB4949;
 }
 
 .tabs_img{
@@ -378,6 +413,11 @@
 	border: 1px solid #EC7979;
 	border-radius: 50%;
 	display: inline-block;
+	transition: 0.3s;
+}
+
+.cart_img:hover {
+	transform: scale(1.1);
 }
 
 .awesome-carts_cart__second {
@@ -443,8 +483,15 @@
 }
 
 .pricing-cart {
+	position: relative;
 	width: 370px;
 	display: inline-block;
+	transition: 0.5s;
+}
+
+.pricing-cart:hover {
+	transform: translate(0, -5%);
+	filter: drop-shadow(0px 16px 20px rgba(51, 51, 51, 0.2));
 }
 
 .pricing-cart_item {
@@ -461,7 +508,6 @@
 
 .pricing-cart__second {
 	margin: 0 25px;
-	filter: drop-shadow(0px 4px 10px rgba(51, 51, 51, 0.2));
 }
 
 .pricing-cart_item__class {
@@ -536,7 +582,7 @@
 	justify-content: space-between;
 }
 
-.customers-reviews_cart {
+.customers-reviews_comment {
 	position: relative;
 	max-width: 370px;
 	font-style: normal;
@@ -548,9 +594,10 @@
 	background: #E2E2E2;
 	margin-bottom: 66px;
 	border-radius: 10px;
+	transition: 0.3s;
 }
 
-.customers-reviews_cart:before {
+.customers-reviews_comment:before {
 	position: absolute;
 	content: "";
 	width: 0;
@@ -562,30 +609,28 @@
 	left: 19%;
 }
 
-.customers-data {
-	display: flex;
-	justify-content: space-between;
+.customers-reviews_comment:hover {
+	transform: scale(1.1);
 }
 
-.customers-data_cart {
+.customers-reviews_data {
 	display: flex;
 	width: 370px;
 	align-items: flex-start;
 }
 
 .customers-data_photo {
-	/* overflow: hidden;
+	overflow: visible;
 	width: 70px;
 	height: 70px;
 	border: 0px solid #FFFFFF;
-	border-radius: 50%; */
-	padding-right: 30px;
+	border-radius: 50%;
 }
 
 .customers-data_text {
 	display: flex;
 	flex-direction: column;
-	/* padding-left: 30px; */
+	margin-left: 30px;
 }
 
 .customers-data_name {
@@ -721,6 +766,7 @@ text-align: center;
 .contact-us-form {
 	display: flex;
 	justify-content: space-between;
+	flex-wrap: wrap;
 }
 
 .contact-us-form_data,
@@ -763,7 +809,18 @@ text-align: center;
 	background: #EC7979;
 	color: #FFFFFF;
 	border: none;
-	margin-bottom: 50px;
+	margin: 0 auto 50px auto;
+	cursor: pointer;
+	transition: 0.3s;
+}
+
+.contact-us-form_button:hover {
+	background: #AB4949;
+}
+
+.contact-us-form_button:active {
+	background: #EC7979;
+	box-shadow: inset 0 0 10px #AB4949;
 }
 
 /* FOOTER */
