--- a/AXIT/css/style.css
+++ b/AXIT/css/style.css
@@ -1,4 +1,6 @@
 @import url(fonts.css);
+/* @import url(style1024.css); */
+
 
 *{
 	padding: 0;
@@ -36,10 +38,6 @@
 	transform: skew(10deg, 10deg);
 }
 
-.axit-nav {
-	width: 50%;
-}
-
 .axit-nav ul {
 	display: flex;
 	justify-content: space-between;
@@ -47,7 +45,7 @@
 
 .axit-nav_item {
 	display: flex;
-	padding: 27px 35px;
+	padding: 27px 30px;
 	font-style: normal;
 	font-weight: 600;
 	font-size: 14px;
@@ -118,7 +116,7 @@ bottom: 0;
 }
 
 .banner-text_caption {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Raleway';
 	font-style: normal;
 	font-weight: 400;
 	font-size: 18px;
@@ -136,7 +134,7 @@ bottom: 0;
 	line-height: 25px;
 	color: #FFFFFF;
 	border: 2px solid #FFFFFF;
-	padding: 20px 0;
+	padding: 14px 0;
 	max-width: 270px;
 	transition: 0.3s;
 }
@@ -258,6 +256,10 @@ bottom: 0;
 	transition: 0.3s;
 }
 
+.social-media_link_item.fa-brands.fa-facebook-f {
+	margin-left: 0;
+}
+
 .social-media_link_item:hover {
 	transform: scale(1.1);
 }
@@ -273,7 +275,7 @@ bottom: 0;
 
 .tabs_button {
 	display: flex;
-	max-width: 600px;
+	max-width: 46%;
 	justify-content: space-between;
 	font-weight: 400;
 	font-size: 14px;
@@ -283,16 +285,18 @@ bottom: 0;
 }
 
 .tabs_button1 {
-	padding: 10px 80px;
+	padding: 10px 0;
+	width: 33.33%;
 	border: 1px solid #C6CBCD;
 	border-bottom: 2px solid #FFFFFF;
 	border-radius: 5px 5px 0 0;
 }
 
 .tabs_button2 {
+	padding: 10px 0;
+	width: 33.33%;
 	border: 1px solid #FFFFFF;
 	border-bottom: none;
-	padding: 10px 80px;
 	border-radius: 5px 5px 0 0;
 	cursor: pointer;
 	transition: 0.3s;
@@ -304,9 +308,10 @@ bottom: 0;
 }
 
 .tabs_button3 {
+	padding: 10px 0;
+	width: 33.33%;
 	border: 1px solid #FFFFFF;
 	border-bottom: none;
-	padding: 10px 80px;
 	border-radius: 5px 5px 0 0;
 	cursor: pointer;
 	transition: 0.3s;
@@ -327,16 +332,16 @@ bottom: 0;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: space-between;
 	max-width: 570px;
 	margin: 0 30px 0 100px;
 }
 
 .tabs_title {
+	text-align: start;
 	font-weight: 700;
 	font-size: 30px;
 	line-height: 41px;
-	padding: 42px 48px 42px 0;
+	padding: 42px 0 42px 0;
 }
 
 .tabs_text {
@@ -345,6 +350,7 @@ bottom: 0;
 	font-size: 18px;
 	line-height: 21px;
 	text-align: start;
+	margin-bottom: 27px;
 }
 
 .tabs_download {
@@ -353,8 +359,9 @@ bottom: 0;
 	font-size: 18px;
 	line-height: 25px;
 	color: #FFFFFF;
-	padding: 15px 90px;
-	margin: 0 0 54px 0;
+	padding: 15px 0;
+	width: 270px;
+	margin: 11px 0 54px 0;
 	background: #EC7979;
 	border: 1px solid #EC7979;
 	transition: 0.3s;
@@ -371,8 +378,10 @@ bottom: 0;
 	box-shadow: inset 0 0 10px #AB4949;
 }
 
-.tabs_img{
+.tabs_img {
 	display: flex;
+	width: 470px;
+	height: 100%;
 }
 
 /* AWESOME */
@@ -387,20 +396,26 @@ bottom: 0;
 }
 
 .awesome-title_name {
+	position: relative;
+	font-family: 'Raleway';
 	font-style: normal;
 	font-weight: 400;
 	font-size: 36px;
 	line-height: 42px;
 	color: #000000;
 	padding: 0 0 57px 0;
+	margin-bottom: 40px;
 }
 
-.awesome-title_underline {
-	max-width: 170px;
-	height: 1px;
-	border: none;
-	background: #EC7979;
-	margin: 0 auto 40px auto;
+.awesome-title_name:before {
+position: absolute;
+content: "";
+background: #EC7979;
+width: 170px;
+height: 1px;
+bottom: 0px;
+left: 50%;
+transform: translate(-50%);
 }
 
 .awesome-title_caption {
@@ -412,7 +427,10 @@ bottom: 0;
 	margin-bottom: 110px;
 }
 
-/* .awesome-carts */
+.awesome-carts {
+	display: flex;
+	justify-content: space-between;
+}
 
 .awesome-carts_cart {
 	max-width: 370px;
@@ -474,22 +492,29 @@ bottom: 0;
 }
 
 .pricing-title_name {
+	font-family: 'Raleway';
+	position: relative;
 	font-style: normal;
 	font-weight: 400;
 	font-size: 36px;
 	line-height: 42px;
 	padding-bottom: 57px;
+	margin-bottom: 40px;
 }
 
-.pricing-title_underline {
+.pricing-title_name:before {
+	position: absolute;
+	content: "";
+	background: #EC7979;
 	width: 170px;
 	height: 1px;
-	margin: 0 auto 40px auto;
-	border: none;
-	background-color: #EC7979;
+	bottom: 0;
+	left: 50%;
+	transform: translate(-50%);
 }
 
 .pricing-title_caption {
+	font-family: 'Raleway';
 	font-style: normal;
 	font-weight: 400;
 	font-size: 18px;
@@ -580,7 +605,8 @@ bottom: 0;
 	width: 170px;
 	height: 1px;
 	bottom: 0;
-	left: calc(50% - 85px);
+	left: 50%;
+	transform: translate(-50%);
 }
 
 .customers-title_caption {
@@ -598,6 +624,7 @@ bottom: 0;
 }
 
 .customers-reviews_comment {
+	font-family: 'Raleway';
 	position: relative;
 	max-width: 370px;
 	font-style: normal;
@@ -626,19 +653,25 @@ bottom: 0;
 
 .customers-reviews_comment:hover {
 	transform: scale(1.1);
+	cursor: default;
 }
 
 .customers-reviews_data {
 	display: flex;
-	width: 370px;
+	width: 100%;
 	align-items: flex-start;
 }
 
-.customers-data_photo {
-	overflow: visible;
+.customers-data_container {
 	width: 70px;
 	height: 70px;
-	border: 0px solid #FFFFFF;
+	overflow: hidden;
+}
+
+.customers-data_photo {
+	width: 100%;
+	height: 100%;
+	border: 1px solid #FFFFFF;
 	border-radius: 50%;
 }
 
@@ -649,7 +682,6 @@ bottom: 0;
 }
 
 .customers-data_name {
-	font-family: 'Open Sans', sans-serif;
 	font-style: normal;
 	font-weight: 700;
 	font-size: 24px;
@@ -658,11 +690,13 @@ bottom: 0;
 }
 
 .customers-data_post {
+	font-family: 'Raleway';
 	font-style: normal;
 	font-weight: 400;
 	font-size: 18px;
 	line-height: 21px;
 	margin-bottom: 64px;
+	text-align: start;
 }
 
 /* STYLISH */
@@ -687,6 +721,7 @@ bottom: 0;
 }
 
 .stylish-title_name {
+	font-family: 'Raleway';
 	position: relative;
 	font-style: normal;
 	font-weight: 400;
@@ -707,6 +742,7 @@ bottom: 0;
 }
 
 .stylish-title_caption {
+	font-family: 'Raleway';
 	position: relative;
 	font-style: normal;
 	font-weight: 400;
@@ -750,6 +786,7 @@ text-align: center;
 }
 
 .contact-us-title_name {
+	font-family: 'Raleway';
 	position: relative;
 	font-style: normal;
 	font-weight: 400;
@@ -771,6 +808,7 @@ text-align: center;
 }
 
 .contact-us-title_caption {
+	font-family: 'Raleway';
 	font-style: normal;
 	font-weight: 400;
 	font-size: 18px;
@@ -781,21 +819,29 @@ text-align: center;
 
 .contact-us-form {
 	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
+	flex-direction: column;
 }
 
-.contact-us-form_data,
-.contact-us-form_message {
+.contact-us-form_input {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 50px;
+}
+
+.contact-us-form_input_data {
 	display: flex;
 	flex-direction: column;
-	width: 49%;
+	width: 48.5%;
 }
 
-.contact-us-form_data input{
+.contact-us-form_input_message {
+	width: 48.5%;
+}
+
+.contact-us-form_input_data input {
 	outline: none;
 	border: none;
-	margin-bottom: 52px;
+	margin-bottom: 50px;
 	border-bottom: 1px solid #BDBDBD;
 	padding-bottom: 16px;
 	font-style: normal;
@@ -804,16 +850,21 @@ text-align: center;
 	line-height: 19px;
 }
 
-.contact-us-form_message input {
+.contact-us-form_input_data input:last-child {
+	margin-bottom: 0px;
+}
+
+.contact-us-form_input_message textarea {
 	outline: none;
+	resize: none;
 	border: none;
-	margin-bottom: 50px;
-	border-bottom: 1px solid #BDBDBD;
-	padding-bottom: 192px;
 	font-style: normal;
 	font-weight: 400;
 	font-size: 14px;
 	line-height: 19px;
+	border-bottom: 1px solid #BDBDBD;
+	width: 100%;
+	height: 100%;
 }
 
 .contact-us-form_button {
@@ -850,7 +901,7 @@ text-align: center;
 .footer-link_list {
 	padding: 40px 0 32px 0px;
 	display: flex;
-	flex-wrap: wrap;
+	/* flex-wrap: wrap; */
 	justify-content: center;
 }
 
@@ -893,7 +944,7 @@ text-align: center;
 }
 
 .footer-copyright {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Raleway';
 	font-style: normal;
 	font-weight: 400;
 	font-size: 18px;
@@ -903,6 +954,377 @@ text-align: center;
 }
 
 
-@media (max-width: 1200) {
+
+
+
+
+
+
+
+@media (max-width: 1200px) {
+
+/* HEADER */
+
+.axit-logo {
+	padding-left: 116px;
 	
+}
+
+/* BANNER */
+
+.banner-content {
+	padding: 138px 0 106px 0;
+}
+
+.banner-text_logo_img {
+	width: 112px;
+	height: 42px;
+}
+
+.banner-text {
+	padding: 0 37px 0 116px;
+}
+
+.banner-text_title {
+	font-weight: 500;
+	font-size: 36px;
+	line-height: 42px;
+}
+
+.banner-text_caption {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 16px;
+}
+
+.banner-text_download {
+	max-width: 183px;
+	padding: 10px 0;
+}
+
+.banner-form_title {
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 25px;
+}
+
+.banner-form_input input {
+	max-width: 298px;
+}
+
+/* SOCIAL MEDIA */
+
+.social-media_content_title {
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 25px;
+}
+
+.social-media_content_text {
+	font-family: 'Raleway';
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 16px;
+}
+
+.social-media_link_item {
+	font-size: 30px;
+	margin-left: 20px;
+}
+
+.tabs {
+	margin: 50px 0 98px 0;
+}
+
+.tabs_button {
+	max-width: 46%;
+}
+
+.tabs_button1 {
+	padding: 10px 0;
+	width: 33.33%;
+}
+
+.tabs_button2 {
+	padding: 10px 0;
+	width: 33.33%;
+}
+
+.tabs_button3 {
+	padding: 10px 0;
+	width: 33.33%;
+}
+
+.tabs_content_text {
+	margin: 0 26px 0 84px;
+	align-items: flex-start;
+}
+
+.tabs_title {
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 33px;
+}
+
+.tabs_text {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 16px;
+}
+
+.tabs_download {
+	width: 232px;
+}
+
+.tabs_img {
+	width: 398px;
+	height: 100%;
+}
+
+/* AWESOME */
+
+.awesome-title_name {
+	font-weight: 400;
+	font-size: 24px;
+	line-height: 28px;
+}
+
+.awesome-title_caption {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 16px;
+	margin-bottom: 65px;
+}
+
+.cart_img {
+	width: 80px;
+	height: 80px;
+	padding: 0;
+}
+
+.cart_img__second {
+padding-top: 16px;
+}
+
+.cart_img__third {
+	padding-top: 5px;
+}
+
+.awesome-carts_cart {
+	max-width: 317px;
+}
+
+.awesome-carts_cart__second {
+	margin: 0;
+}
+
+.awesome-carts_cart h4 {
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 25px;
+}
+
+.awesome-carts_cart p {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 16px;
+}
+
+/* PRICING OPTIONS */
+
+.pricing-title_name {
+	font-weight: 400;
+	font-size: 24px;
+	line-height: 28px;
+	margin-bottom: 32px;
+}
+
+.pricing-title_caption {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 16px;
+}
+
+.pricing-cart {
+	max-width: 317px;
+}
+
+.pricing-list {
+	display: flex;
+	justify-content: space-between;
+}
+
+.customers-title_name {
+	font-weight: 400;
+	font-size: 24px;
+	line-height: 28px;
+}
+
+.customers-title_caption {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 16px;
+}
+
+.customers-reviews_cart {
+	max-width: 317px;
+}
+
+.customers-reviews_cart_second {
+	margin: 0 20px;
+}
+
+.customers-reviews_comment {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 16px;
+}
+
+.customers-data_container {
+	width: 63px;
+	height: 63px;
+}
+
+.customers-data_name {
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 25px;
+}
+
+.customers-data_post {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 16px;
+}
+
+/* STYLISH */
+
+.stylish-title_name {
+	font-weight: 400;
+	font-size: 24px;
+	line-height: 28px;
+}
+
+.stylish-title_caption {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 16px;
+}
+
+.stylish-download {
+	width: 318px;
+}
+
+/* CONTACT US */
+
+.contact-us-title_name {
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 28px;
+}
+
+.contact-us-title_caption {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 16px;
+}
+
+/* FOOTER */
+
+.footer-link_item {
+width: 38px;
+height: 38px;
+}
+
+.footer-copyright {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 16px;
+}
+
+}
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+
+/* HEADER */
+
+	.axit-logo {
+	padding: 17px 0 16px 4px;
+}
+
+.axit-nav {
+	display: none;
+}
+
+/* BANNER */
+
+.banner-content {
+	flex-direction: column;
+	padding: 84px 0 50px 0;
+}
+
+.banner-text_logo {
+	display: none;
+}
+
+.banner-text_title::before {
+	left: 50%;
+	transform: translate(-50%);
+}
+
+.banner-text {
+	padding: 0;
+	text-align: center;
+}
+
+.banner-text_caption {
+	margin-bottom: 42px;
+}
+
+.banner-text_download {
+	margin: 0 auto 56px auto;
+
+}
+
+.banner-form_input input {
+	max-width: 240px;
+	margin: 0 28px 33px 20px;
+}
+
+/* SOCIAL MEDIA */
+
+.social-media {
+	flex-direction: column;
+}
+
+/* TABS */
+
+.tabs_img {
+	display: none;
+}
+
+/* CUSTOMERS */
+
+.customers-reviews {
+	flex-direction: column;
+}
+
+/* FOOTER */
+
+.footer-link_item {
+	width: 23px;
+	height: 23px;
+}
+
+.footer-link_item {
+	margin: 0 10px;
+}
 }
