--- a/AXIT/css/style.css
+++ b/AXIT/css/style.css
@@ -60,6 +60,10 @@
 	box-shadow: inset 0 0 50px #000000;
 }
 
+#menu__toggle {
+	display: none;
+}
+
 /* BANNER */
 
 .banner {
@@ -197,11 +201,11 @@ bottom: 0;
 	margin-top: 75px;
 }
 
-.banner-form_button:hover {
+.banner-form_button button:hover {
 	background: #AB4949;
 }
 
-.banner-form_button:active {
+.banner-form_button button:active {
 	background: #EC7979;
 	box-shadow: inset 0 0 10px #AB4949;
 }
@@ -231,12 +235,17 @@ bottom: 0;
 }
 
 .social-media_content_text {
+
 	font-style: normal;
 	font-weight: 400;
 	font-size: 18px;
 	line-height: 21px;
 	color: #86878B;
 	margin-bottom: 18px;
+}
+
+.social-media_content_text p {
+	font-family: 'Raleway';
 }
 
 .social-media_link {
@@ -273,7 +282,7 @@ bottom: 0;
 	text-align: center;
 }
 
-.tabs_button {
+.tabs_section_button {
 	display: flex;
 	max-width: 46%;
 	justify-content: space-between;
@@ -331,7 +340,6 @@ bottom: 0;
 .tabs_content_text {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 	max-width: 570px;
 	margin: 0 30px 0 100px;
 }
@@ -419,6 +427,7 @@ transform: translate(-50%);
 }
 
 .awesome-title_caption {
+	font-family: 'Raleway';
 	font-style: normal;
 	font-weight: 400;
 	font-size: 18px;
@@ -466,7 +475,6 @@ transform: translate(-50%);
 	font-weight: 700;
 	font-size: 24px;
 	line-height: 33px;
-	font-family: 'Open Sans', sans-serif;
 	margin: 0px 0px 44px 0px;
 }
 
@@ -535,6 +543,7 @@ transform: translate(-50%);
 }
 
 .pricing-cart_item {
+	font-family: 'Raleway';
 	padding: 15px 0 14px 0;
 	font-style: normal;
 	font-weight: 400;
@@ -551,7 +560,7 @@ transform: translate(-50%);
 }
 
 .pricing-cart_item__class {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Open Sans';
 	padding: 18px 0;
 	font-style: normal;
 	font-weight: 700;
@@ -562,6 +571,7 @@ transform: translate(-50%);
 }
 
 .pricing-cart_item__cost {
+	font-family: 'Raleway';
 	padding: 28px 0;
 	font-style: normal;
 	font-weight: 700;
@@ -572,6 +582,7 @@ transform: translate(-50%);
 }
 
 .pricing-cart_item__free {
+	font-family: 'Raleway';
 	padding: 14px 0;
 	font-style: normal;
 	font-weight: 400;
@@ -1009,7 +1020,7 @@ text-align: center;
 }
 
 .banner-form_input input {
-	max-width: 298px;
+	width: 268px;
 }
 
 /* SOCIAL MEDIA */
@@ -1028,7 +1039,7 @@ text-align: center;
 }
 
 .social-media_link_item {
-	font-size: 30px;
+	font-size: 40px;
 	margin-left: 20px;
 }
 
@@ -1036,7 +1047,7 @@ text-align: center;
 	margin: 50px 0 98px 0;
 }
 
-.tabs_button {
+.tabs_section_button {
 	max-width: 46%;
 }
 
@@ -1064,6 +1075,7 @@ text-align: center;
 	font-weight: 700;
 	font-size: 24px;
 	line-height: 33px;
+	text-align: center;
 }
 
 .tabs_text {
@@ -1073,12 +1085,12 @@ text-align: center;
 }
 
 .tabs_download {
-	width: 232px;
+	width: 242px;
 }
 
 .tabs_img {
 	width: 398px;
-	height: 100%;
+	height: 385px;
 }
 
 /* AWESOME */
@@ -1170,7 +1182,7 @@ padding-top: 16px;
 	max-width: 317px;
 }
 
-.customers-reviews_cart_second {
+.customers-reviews_cart__second {
 	margin: 0 20px;
 }
 
@@ -1260,14 +1272,86 @@ height: 38px;
 	padding: 17px 0 16px 4px;
 }
 
-.axit-nav {
-	display: none;
+#menu__toggle {
+	opacity: 0;
+}
+
+.menu__btn {
+	display: flex;
+	align-items: center;
+	position: relative;
+	top: 0px;
+	right: 10px;
+	width: 24px;
+	height: 18px;
+	cursor: pointer;
+	z-index: 1;
+}
+
+#menu__toggle:checked~.menu__btn>span {
+	transform: rotate(45deg);
+}
+
+#menu__toggle:checked~.menu__btn>span::before {
+	top: 0;
+	transform: rotate(0);
+}
+
+#menu__toggle:checked~.menu__btn>span::after {
+	top: 0;
+	transform: rotate(90deg);
+}
+
+#menu__toggle:checked~.axit-nav_menu {
+	visibility: visible;
+	left: 0;
+}
+
+.menu__btn>span,
+.menu__btn>span::before,
+.menu__btn>span::after {
+	transition-duration: .25s;
+}
+
+.axit-nav_menu {
+	transition-duration: .25s;
+}
+
+.axit-nav_item {
+	transition-duration: .25s;
+}
+
+.menu__btn>span,
+.menu__btn>span::before,
+.menu__btn>span::after {
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	background-color: #FFFFFF;
+}
+
+.menu__btn>span::before {
+	content: '';
+	top: -9px;
+}
+
+.menu__btn>span::after {
+	content: '';
+	top: 9px;
+}
+
+.axit-nav_menu {
+	display: block;
+	position: fixed;
+	visibility: hidden;
 }
 
 /* BANNER */
 
 .banner-content {
 	flex-direction: column;
+	align-items: center;
 	padding: 84px 0 50px 0;
 }
 
@@ -1291,7 +1375,18 @@ height: 38px;
 
 .banner-text_download {
 	margin: 0 auto 56px auto;
+}
 
+.banner-form {
+	max-width: 288px;
+}
+
+.banner-form_title {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 19px;
+	padding: 38px 28px 38px 20px;
+	margin: 0;
 }
 
 .banner-form_input input {
@@ -1299,22 +1394,242 @@ height: 38px;
 	margin: 0 28px 33px 20px;
 }
 
+.banner-form_button {
+	width: 100%;
+}
+
 /* SOCIAL MEDIA */
 
 .social-media {
 	flex-direction: column;
+	align-items: center;
+}
+
+.social-media_content {
+	text-align: center;
+}
+
+.social-media_content_title {
+	margin: 44px 0 26px 0;
+}
+
+.social-media_content_text {
+	margin-bottom: 35px;
+}
+
+.social-media_link {
+	margin-bottom: 48px;
+}
+
+.social-media_link_item {
+	font-size: 25px;
 }
 
 /* TABS */
+
+.tabs {
+	margin-bottom: 51px;
+}
+
+.tabs_section_button {
+	max-width: 100%;
+}
+
+.tabs_content_text {
+	margin: 0 auto;
+	align-items: center;
+	text-align: center;
+	max-width: 243px;
+}
+
+.tabs_title {
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 25px;
+	padding: 47px 0 76px 0;
+}
+
+.tabs_text {
+	text-align: center;
+	font-weight: 400;
+	font-size: 13px;
+	line-height: 15px;
+	margin-bottom: 29px;
+}
+
+.tabs_download {
+	margin: 0 auto;
+	margin-bottom: 30px;
+}
 
 .tabs_img {
 	display: none;
 }
 
+/* AWESOME */
+
+.awesome-title {
+	margin-top: 0;
+}
+
+.awesome-title_name {
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 21px;
+	padding-bottom: 51px;
+	margin-bottom: 25px;
+}
+
+.awesome-title_name:before {
+	width: 134px;
+}
+
+.awesome-title_caption {
+	font-weight: 400;
+	font-size: 13px;
+	line-height: 15px;
+	margin-bottom: 83px;
+}
+
+.awesome-carts {
+	flex-direction: column;
+	align-items: center;
+}
+
+.awesome-carts_cart {
+	margin-bottom: 44px;
+}
+
+.cart_img {
+	margin-bottom: 65px;
+}
+
+.awesome-carts_cart h4 {
+	margin-bottom: 41px;
+}
+
+/* PRICING OPTIONS */
+
+.pricing {
+	padding: 48px 0 26px 0;
+}
+.pricing-title {
+	margin-bottom: 24px;
+}
+
+.pricing-title_name {
+	margin-bottom: 24px;
+}
+
+.pricing-list {
+	flex-direction: column;
+	align-items: center;
+}
+
+.pricing-cart {
+	max-width: 288px;
+	margin-bottom: 27px;
+}
+
+.pricing-cart_item {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 16px;
+	padding: 9px 0;
+}
+
+.pricing-cart_item__class {
+	font-family: 'Raleway';
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 25px;
+}
+
+.pricing-cart_item__cost {
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 28px;
+	padding: 27px 0;
+}
+
+.pricing-cart_item__free {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 16px;
+}
+
 /* CUSTOMERS */
+
+.customers-title_name {
+	margin-top: 48px;
+}
+
+.customers-title_caption {
+	margin-bottom: 24px;
+}
 
 .customers-reviews {
 	flex-direction: column;
+	align-items: center;
+}
+
+.customers-reviews_cart__second,
+.customers-reviews_cart__third {
+	display: none;
+}
+
+/* STYLISH */
+
+.stylish-title_name {
+	padding-top: 57px;
+}
+
+.stylish-title_caption {
+	margin:16px 0 66px 0;
+}
+
+.stylish-download {
+	max-width: 287px;
+	padding: 10px 0;
+	margin-bottom: 58px;
+}
+
+/* CONTACT US */
+
+.contact-us-title_name {
+	font-weight: 400;
+}
+
+.contact-us-title_caption {
+	margin-bottom: 64px;
+}
+
+.contact-us-form_input {
+	flex-direction: column;
+	align-items: center;
+}
+
+.contact-us-form_input_data {
+	width: 100%;
+}
+
+.contact-us-form_input_message {
+	width: 100%;
+}
+
+.contact-us-form_input_message textarea {
+	width: 100%;
+	padding-bottom: 182px;
+}
+
+.contact-us-form_input_data input:last-child {
+	margin-bottom: 50px;
+}
+
+.contact-us-form_button {
+	width: 288px;
+	padding: 16px 0;
+	margin-bottom: 40px;
 }
 
 /* FOOTER */
